[package]
name = "rusty_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bincode = "1.3.3"
eyre = "0.6.8"
serde = { version = "1.0.144", features = ["derive"] }
serde_bytes = "0.11.7"
thiserror = "1.0.35"
tracing = "0.1.36"
